install-meta (0.1.16) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 21 May 2007 23:34:21 +0200

install-meta (0.1.15) unstable; urgency=low

  * new iwlwifi package
  * new ipw3945:  Reverting back from iwlwifi-ucode

 -- Horst Tritremmel <hjt@sidux.com>  Mon, 21 May 2007 21:43:03 +0200

install-meta (0.1.14) unstable; urgency=low

  * Croatian Language Pack update

 -- Horst Tritremmel <hjt@sidux.com>  Mon, 21 May 2007 15:24:20 +0200

install-meta (0.1.13) unstable; urgency=low

  * delete a %s\n for fprintf 

 -- Horst Tritremmel <hjt@sidux.com>  Wed, 16 May 2007 21:08:01 +0200

install-meta (0.1.12) unstable; urgency=low

  * fix the maintainer mail address.
  * remove obsolete fix-unionfs functionality.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 15 May 2007 13:21:38 +0200

install-meta (0.1.11) unstable; urgency=low

  * add a warning label

 -- Horst Tritremmel <hjt@sidux.com>  Fri, 11 May 2007 22:35:35 +0200

install-meta (0.1.10) unstable; urgency=low

  * update packages
  * not resizeable
  * change sidux.jpg to sidux.png 

 -- Horst Tritremmel <hjt@sidux.com>  Thu, 10 May 2007 12:59:34 +0200

install-meta (0.1.9) unstable; urgency=low

  * replace the other automake1.9 files appropriately.
  * build-depend of automake1.9.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 08 May 2007 12:29:47 +0200

install-meta (0.1.8) unstable; urgency=low

  * symlinks for config.sub/ config.guess are bad for checkouts, revert to an
    adapted copying on use.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 08 May 2007 12:07:51 +0200

install-meta (0.1.7) unstable; urgency=low

  * new meta icon fix 

 -- Horst Tritremmel <hjt@sidux.com>  Mon, 07 May 2007 10:28:41 +0200

install-meta (0.1.6) unstable; urgency=low

  * use new icon

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 06 May 2007 21:14:44 +0200

install-meta (0.1.5) unstable; urgency=low

  * new/update metapackages
