@@ -492,7 +492,7 @@ or use   --dir=&lt;dir&gt;
   <property name="visible">True</property>
   <property name="title" translatable="yes">Install metapackages</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
-  <property name="window_position">GTK_WIN_POS_NONE</property>
+  <property name="window_position">GTK_WIN_POS_CENTER_ALWAYS</property>
   <property name="modal">False</property>
   <property name="resizable">False</property>
   <property name="destroy_with_parent">False</property>
@@ -501,7 +501,7 @@ or use   --dir=&lt;dir&gt;
   <property name="skip_taskbar_hint">False</property>
   <property name="skip_pager_hint">False</property>
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
-  <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
+  <property name="gravity">GDK_GRAVITY_CENTER</property>
   <property name="focus_on_map">True</property>
   <property name="urgency_hint">False</property>
   <signal name="show" handler="on_window_main_show" last_modification_time="Fri, 20 Apr 2007 09:07:11 GMT"/>
@@ -513,19 +513,28 @@ or use   --dir=&lt;dir&gt;
       <property name="visible">True</property>
 
       <child>
-	<widget class="GtkImage" id="image8">
-	  <property name="width_request">241</property>
-	  <property name="height_request">33</property>
+	<widget class="GtkLabel" id="label22">
+	  <property name="width_request">734</property>
+	  <property name="height_request">30</property>
 	  <property name="visible">True</property>
-	  <property name="pixbuf">install-meta-title.png</property>
-	  <property name="xalign">0.5</property>
+	  <property name="label" translatable="yes">&lt;span foreground=&quot;red&quot; font_desc=&quot;Sans Bold 12&quot;&gt;To use this feature, make sure you are connected to the internet.&lt;/span&gt;</property>
+	  <property name="use_underline">False</property>
+	  <property name="use_markup">True</property>
+	  <property name="justify">GTK_JUSTIFY_LEFT</property>
+	  <property name="wrap">False</property>
+	  <property name="selectable">False</property>
+	  <property name="xalign">0</property>
 	  <property name="yalign">0.5</property>
 	  <property name="xpad">0</property>
 	  <property name="ypad">0</property>
+	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	  <property name="width_chars">-1</property>
+	  <property name="single_line_mode">False</property>
+	  <property name="angle">0</property>
 	</widget>
 	<packing>
-	  <property name="x">528</property>
-	  <property name="y">0</property>
+	  <property name="x">8</property>
+	  <property name="y">28</property>
 	</packing>
       </child>
 
@@ -556,35 +565,26 @@ or use   --dir=&lt;dir&gt;
       </child>
 
       <child>
-	<widget class="GtkLabel" id="label22">
-	  <property name="width_request">734</property>
-	  <property name="height_request">30</property>
+	<widget class="GtkImage" id="image8">
+	  <property name="width_request">241</property>
+	  <property name="height_request">33</property>
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">&lt;span foreground=&quot;red&quot; font_desc=&quot;Sans Bold 12&quot;&gt;To use this feature, make sure you are connected to the internet.&lt;/span&gt;</property>
-	  <property name="use_underline">False</property>
-	  <property name="use_markup">True</property>
-	  <property name="justify">GTK_JUSTIFY_LEFT</property>
-	  <property name="wrap">False</property>
-	  <property name="selectable">False</property>
-	  <property name="xalign">0</property>
+	  <property name="pixbuf">install-meta-title.png</property>
+	  <property name="xalign">0.5</property>
 	  <property name="yalign">0.5</property>
 	  <property name="xpad">0</property>
 	  <property name="ypad">0</property>
-	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-	  <property name="width_chars">-1</property>
-	  <property name="single_line_mode">False</property>
-	  <property name="angle">0</property>
 	</widget>
 	<packing>
-	  <property name="x">8</property>
-	  <property name="y">32</property>
+	  <property name="x">528</property>
+	  <property name="y">0</property>
 	</packing>
       </child>
 
       <child>
 	<widget class="GtkNotebook" id="notebook1">
-	  <property name="width_request">784</property>
-	  <property name="height_request">494</property>
+	  <property name="width_request">764</property>
+	  <property name="height_request">466</property>
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
 	  <property name="show_tabs">True</property>
@@ -657,8 +657,8 @@ or use   --dir=&lt;dir&gt;
 
 	      <child>
 		<widget class="GtkScrolledWindow" id="scrolledwindow1">
-		  <property name="width_request">721</property>
-		  <property name="height_request">400</property>
+		  <property name="width_request">700</property>
+		  <property name="height_request">380</property>
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
@@ -687,106 +687,6 @@ or use   --dir=&lt;dir&gt;
 		<packing>
 		  <property name="x">48</property>
 		  <property name="y">8</property>
-		</packing>
-	      </child>
-
-	      <child>
-		<widget class="GtkButton" id="exit">
-		  <property name="width_request">150</property>
-		  <property name="height_request">28</property>
-		  <property name="visible">True</property>
-		  <property name="can_focus">True</property>
-		  <property name="relief">GTK_RELIEF_NORMAL</property>
-		  <property name="focus_on_click">True</property>
-		  <signal name="clicked" handler="on_exit_clicked" last_modification_time="Mon, 15 Jan 2007 12:08:01 GMT"/>
-
-		  <child>
-		    <widget class="GtkAlignment" id="alignment2">
-		      <property name="visible">True</property>
-		      <property name="xalign">0.5</property>
-		      <property name="yalign">0.5</property>
-		      <property name="xscale">0</property>
-		      <property name="yscale">0</property>
-		      <property name="top_padding">0</property>
-		      <property name="bottom_padding">0</property>
-		      <property name="left_padding">0</property>
-		      <property name="right_padding">0</property>
-
-		      <child>
-			<widget class="GtkHBox" id="hbox2">
-			  <property name="visible">True</property>
-			  <property name="homogeneous">False</property>
-			  <property name="spacing">2</property>
-
-			  <child>
-			    <widget class="GtkImage" id="image5">
-			      <property name="visible">True</property>
-			      <property name="stock">gtk-quit</property>
-			      <property name="icon_size">4</property>
-			      <property name="xalign">0.5</property>
-			      <property name="yalign">0.5</property>
-			      <property name="xpad">0</property>
-			      <property name="ypad">0</property>
-			    </widget>
-			    <packing>
-			      <property name="padding">0</property>
-			      <property name="expand">False</property>
-			      <property name="fill">False</property>
-			    </packing>
-			  </child>
-
-			  <child>
-			    <widget class="GtkLabel" id="label10">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Exit</property>
-			      <property name="use_underline">True</property>
-			      <property name="use_markup">False</property>
-			      <property name="justify">GTK_JUSTIFY_LEFT</property>
-			      <property name="wrap">False</property>
-			      <property name="selectable">False</property>
-			      <property name="xalign">0.5</property>
-			      <property name="yalign">0.5</property>
-			      <property name="xpad">0</property>
-			      <property name="ypad">0</property>
-			      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-			      <property name="width_chars">-1</property>
-			      <property name="single_line_mode">False</property>
-			      <property name="angle">0</property>
-			    </widget>
-			    <packing>
-			      <property name="padding">0</property>
-			      <property name="expand">False</property>
-			      <property name="fill">False</property>
-			    </packing>
-			  </child>
-			</widget>
-		      </child>
-		    </widget>
-		  </child>
-		</widget>
-		<packing>
-		  <property name="x">48</property>
-		  <property name="y">425</property>
-		</packing>
-	      </child>
-
-	      <child>
-		<widget class="GtkCheckButton" id="checkbutton_yes">
-		  <property name="width_request">297</property>
-		  <property name="height_request">28</property>
-		  <property name="visible">True</property>
-		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">use option --yes for apt-get install</property>
-		  <property name="use_underline">True</property>
-		  <property name="relief">GTK_RELIEF_NORMAL</property>
-		  <property name="focus_on_click">True</property>
-		  <property name="active">True</property>
-		  <property name="inconsistent">False</property>
-		  <property name="draw_indicator">True</property>
-		</widget>
-		<packing>
-		  <property name="x">288</property>
-		  <property name="y">427</property>
 		</packing>
 	      </child>
 
@@ -866,7 +766,107 @@ or use   --dir=&lt;dir&gt;
 		</widget>
 		<packing>
 		  <property name="x">600</property>
-		  <property name="y">425</property>
+		  <property name="y">398</property>
+		</packing>
+	      </child>
+
+	      <child>
+		<widget class="GtkCheckButton" id="checkbutton_yes">
+		  <property name="width_request">297</property>
+		  <property name="height_request">28</property>
+		  <property name="visible">True</property>
+		  <property name="can_focus">True</property>
+		  <property name="label" translatable="yes">use option --yes for apt-get install</property>
+		  <property name="use_underline">True</property>
+		  <property name="relief">GTK_RELIEF_NORMAL</property>
+		  <property name="focus_on_click">True</property>
+		  <property name="active">True</property>
+		  <property name="inconsistent">False</property>
+		  <property name="draw_indicator">True</property>
+		</widget>
+		<packing>
+		  <property name="x">288</property>
+		  <property name="y">399</property>
+		</packing>
+	      </child>
+
+	      <child>
+		<widget class="GtkButton" id="exit">
+		  <property name="width_request">150</property>
+		  <property name="height_request">28</property>
+		  <property name="visible">True</property>
+		  <property name="can_focus">True</property>
+		  <property name="relief">GTK_RELIEF_NORMAL</property>
+		  <property name="focus_on_click">True</property>
+		  <signal name="clicked" handler="on_exit_clicked" last_modification_time="Mon, 15 Jan 2007 12:08:01 GMT"/>
+
+		  <child>
+		    <widget class="GtkAlignment" id="alignment2">
+		      <property name="visible">True</property>
+		      <property name="xalign">0.5</property>
+		      <property name="yalign">0.5</property>
+		      <property name="xscale">0</property>
+		      <property name="yscale">0</property>
+		      <property name="top_padding">0</property>
+		      <property name="bottom_padding">0</property>
+		      <property name="left_padding">0</property>
+		      <property name="right_padding">0</property>
+
+		      <child>
+			<widget class="GtkHBox" id="hbox2">
+			  <property name="visible">True</property>
+			  <property name="homogeneous">False</property>
+			  <property name="spacing">2</property>
+
+			  <child>
+			    <widget class="GtkImage" id="image5">
+			      <property name="visible">True</property>
+			      <property name="stock">gtk-quit</property>
+			      <property name="icon_size">4</property>
+			      <property name="xalign">0.5</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">False</property>
+			      <property name="fill">False</property>
+			    </packing>
+			  </child>
+
+			  <child>
+			    <widget class="GtkLabel" id="label10">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Exit</property>
+			      <property name="use_underline">True</property>
+			      <property name="use_markup">False</property>
+			      <property name="justify">GTK_JUSTIFY_LEFT</property>
+			      <property name="wrap">False</property>
+			      <property name="selectable">False</property>
+			      <property name="xalign">0.5</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+			      <property name="width_chars">-1</property>
+			      <property name="single_line_mode">False</property>
+			      <property name="angle">0</property>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">False</property>
+			      <property name="fill">False</property>
+			    </packing>
+			  </child>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+		</widget>
+		<packing>
+		  <property name="x">48</property>
+		  <property name="y">398</property>
 		</packing>
 	      </child>
 	    </widget>
@@ -1225,7 +1225,7 @@ see non-free category &lt;/span&gt; </property>
 	</widget>
 	<packing>
 	  <property name="x">0</property>
-	  <property name="y">72</property>
+	  <property name="y">58</property>
 	</packing>
       </child>
     </widget>
