@@ -1,8 +1,12 @@
 install-meta (0.1.16) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 21 May 2007 23:34:21 +0200
+  [ Horst Tritremmel ]
+  * make window smaller for 800x600 res
+
+ -- Horst Tritremmel <hjt@sidux.com>  Wed, 30 May 2007 09:40:51 +0200
 
 install-meta (0.1.15) unstable; urgency=low
 
